# cpp-win32

./: CMakeLists.txt  README.md
cmake/: CppWin32Config.cmake.in
include/win32/: Base.h  Shell.h  String.h  application.hpp  debug.hpp  memory.hpp  string.hpp  window.hpp
